--- a/src/components/forms/styles/ForgotPasswordForm.css
+++ b/src/components/forms/styles/ForgotPasswordForm.css
@@ -3,17 +3,17 @@
 
 
 
-.LoginForm-ZiriuzLogo {
+/* .LoginForm-ZiriuzLogo {
 
-    width: 150px; /* Ajusta el tamaño según tus necesidades */
+    width: 150px; 
     height: auto;
-    margin: 10px auto; /* Ajusta los márgenes según tus necesidades */
+    margin: 10px auto; 
     display: block;
   }
+ */
 
 
-
-.LoginForm-box
+.ForgotPasswordForm-box
 {
     position: relative;
     width: 380px;
@@ -23,7 +23,7 @@
     overflow: hidden;
 }
 
-.LoginForm-box::before
+.ForgotPasswordForm-box::before
 {
     content: '';
     position: absolute;
@@ -37,7 +37,7 @@
     animation: animate 6s linear infinite;
 }
 
-.LoginForm-box::after
+.ForgotPasswordForm-box::after
 {
     content: '';
     position: absolute;
@@ -65,7 +65,7 @@
 }
 
 
-.LoginForm-form
+.ForgotPasswordForm-form
 {
     position: absolute;
     inset: 2px;
@@ -77,7 +77,7 @@
     flex-direction:  column;    
 }
 
-.LoginForm-form h2
+.ForgotPasswordForm-form h2
 {
     color:#00ddfa;
     font-weight: 500;
@@ -86,7 +86,7 @@
 }
 
 
-.LoginForm-inputBox
+.ForgotPasswordForm-inputBox
 {
     position: relative;
     width: 300px;
@@ -95,7 +95,7 @@
 }
 
 
-.LoginForm-Field
+.ForgotPasswordForm-input
 {
     position: relative;
     width: 100%;
@@ -109,7 +109,7 @@
     z-index: 10;
 }
 
-.LoginForm-inputBox span
+.ForgotPasswordForm-inputBox span
 {
     position: absolute;
     left: 0;
@@ -122,8 +122,8 @@
 }
 
 
-.LoginForm-Field:valid ~ span,
-.LoginForm-Field:focus ~ span
+.ForgotPasswordForm-input:valid ~ span,
+.ForgotPasswordForm-input:focus ~ span
 {
     color: #00ddfa;
     transform: translateX(0px) translateY(-34px);
@@ -132,7 +132,7 @@
 
 
 
-.LoginForm-inputBox i
+.ForgotPasswordForm-inputBox i
 {
     position: absolute;
     left: 0;
@@ -146,14 +146,14 @@
     z-index: 9;
 }
 
-.LoginForm-Field:valid ~ i,
-.LoginForm-Field:focus ~ i
+.ForgotPasswordForm-input:valid ~ i,
+.ForgotPasswordForm-input:focus ~ i
 {
     height: 44px;
 
 }
 
-.LoginForm-links a
+.ForgotPasswordForm-links a
 {
     margin: 10px 0;
     font-size: 0.75em;
@@ -162,13 +162,13 @@
 
 }
 
-.LoginForm-links a:hover,
-.LoginForm-links a:nth-child(2)
+.ForgotPasswordForm-links a:hover,
+.ForgotPasswordForm-links a:nth-child(2)
 {
     color: #00ddfa;
 }
 
-.LoginForm-button[type="submit"]
+.ForgotPasswordForm-button[type="submit"]
 {
     border: none;
     outline: none;
@@ -181,7 +181,11 @@
     cursor: pointer;
 }
 
-.LoginForm-button[type="submit"]:active
+.ForgotPasswordForm-button[type="submit"]:active
 {
     opacity: 0.8;
+}
+
+.ForgotPasswordForm-p{
+    color: #c4c4c4;
 }
