--- a/src/components/forms/styles/OTPValidatorForm.css
+++ b/src/components/forms/styles/OTPValidatorForm.css
@@ -3,17 +3,17 @@
 
 
 
-.LoginForm-ZiriuzLogo {
+/* .LoginForm-ZiriuzLogo {
 
-    width: 150px; /* Ajusta el tamaño según tus necesidades */
+    width: 150px; 
     height: auto;
-    margin: 10px auto; /* Ajusta los márgenes según tus necesidades */
+    margin: 10px auto; 
     display: block;
-  }
+  } */
 
 
 
-.LoginForm-box
+.OTPValidatorForm-box
 {
     position: relative;
     width: 380px;
@@ -23,7 +23,7 @@
     overflow: hidden;
 }
 
-.LoginForm-box::before
+.OTPValidatorForm-box::before
 {
     content: '';
     position: absolute;
@@ -37,7 +37,7 @@
     animation: animate 6s linear infinite;
 }
 
-.LoginForm-box::after
+.OTPValidatorForm-box::after
 {
     content: '';
     position: absolute;
@@ -65,7 +65,7 @@
 }
 
 
-.LoginForm-form
+.OTPValidatorForm-form
 {
     position: absolute;
     inset: 2px;
@@ -77,7 +77,7 @@
     flex-direction:  column;    
 }
 
-.LoginForm-form h2
+.OTPValidatorForm-form h2
 {
     color:#00ddfa;
     font-weight: 500;
@@ -86,7 +86,7 @@
 }
 
 
-.LoginForm-inputBox
+.OTPValidatorForm-inputBox
 {
     position: relative;
     width: 300px;
@@ -95,7 +95,7 @@
 }
 
 
-.LoginForm-Field
+.OTPValidatorForm-Field
 {
     position: relative;
     width: 100%;
@@ -109,7 +109,7 @@
     z-index: 10;
 }
 
-.LoginForm-inputBox span
+.OTPValidatorForm-inputBox span
 {
     position: absolute;
     left: 0;
@@ -122,8 +122,8 @@
 }
 
 
-.LoginForm-Field:valid ~ span,
-.LoginForm-Field:focus ~ span
+.OTPValidatorForm-Field:valid ~ span,
+.OTPValidatorForm-Field:focus ~ span
 {
     color: #00ddfa;
     transform: translateX(0px) translateY(-34px);
@@ -132,7 +132,7 @@
 
 
 
-.LoginForm-inputBox i
+.OTPValidatorForm-inputBox i
 {
     position: absolute;
     left: 0;
@@ -146,29 +146,17 @@
     z-index: 9;
 }
 
-.LoginForm-Field:valid ~ i,
-.LoginForm-Field:focus ~ i
+.OTPValidatorForm-Field:valid ~ i,
+.OTPValidatorForm-Field:focus ~ i
 {
     height: 44px;
 
 }
 
-.LoginForm-links a
-{
-    margin: 10px 0;
-    font-size: 0.75em;
-    color: #8f8f8f;
-    text-decoration: none;
 
-}
 
-.LoginForm-links a:hover,
-.LoginForm-links a:nth-child(2)
-{
-    color: #00ddfa;
-}
 
-.LoginForm-button[type="submit"]
+.OTPValidatorForm-button[type="submit"]
 {
     border: none;
     outline: none;
@@ -181,7 +169,11 @@
     cursor: pointer;
 }
 
-.LoginForm-button[type="submit"]:active
+.OTPValidatorForm-button[type="submit"]:active
 {
     opacity: 0.8;
+}
+
+.OTPValidatorForm-p{
+    color: #c4c4c4;
 }
