--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,4 @@
-/* *
-{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
-}
 
-
-body
-{
-    display:flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    background: #23242a;
-} */
 
 
 
@@ -27,14 +11,16 @@ body
 }
 
 body {
-    min-height: 100vh;
+    height: 100%;
+	width: 100%;
     background: linear-gradient(90deg, #aea4e3, #d3ffe8);
   }
 
 
   .App-container {
+	height: 100vh;
+	width: 100%;
 	background:#23242a;
-	min-height: 100vh;
 	overflow: hidden;
 	position: relative;
     display: flex;
@@ -44,10 +30,10 @@ body {
 
 
 .App-blob-c {
-	min-height: 100vh;
+	height: 100vh;
+	width: 100%;
 	overflow: hidden;
 	position:absolute;
-	width: 100%;
 	filter: blur(40px);
 /*   background: rgba(255,255,255,0.1) */
 }
