--- a/src/components/dashboard/styles/lateralmenudashboard.css
+++ b/src/components/dashboard/styles/lateralmenudashboard.css
@@ -5,7 +5,12 @@
     -ms-user-select:none;
     -o-user-select:none;
   }
-
+  .DashboardMenuLateral-logo{
+      display: flex;
+      padding: 1px;
+      margin: 1;
+  
+  }
 
 .DashboardMenuLateral-main-menu > ul,
 .DashboardMenuLateral-main-menu > ul > li {
@@ -18,7 +23,7 @@
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  color:#999;
+  color: #00ddfa;
   font-size: 1rem;
   transition:all .1s linear;
   -webkit-transition:all .1s linear;
@@ -28,17 +33,19 @@
 
 
    .DashboardMenuLateral-main-menu {
+    color: #00ddfa;
     position:fixed;
     top: 0;
     left: 0;
     height: 100%;
-    width: 60px;
+    width: 48px;
     overflow:hidden;
     background: rgba(32, 32, 32, 0.6);
     transition: width .05s linear;
     -webkit-transition: width .05s linear;
     z-index: 10;
     padding-top: 10px;
+    
   }
 
 
@@ -57,14 +64,15 @@
 
 
   .DashboardMenuLateral-icon {
-    width: 60px;
-    height: 20px;
-    font-size: 20px;
-    text-align: center;
+    width: 20px;
+    height: 20px; 
+    color:#00ddfa;
+    
   }
 
 
   .DashboardMenuLateral-nav-text {
+    padding: 0px 10px 10px 10px;
     width: 120px;
     height: 20px;
     font-family: "Mulish", sans-serif;
@@ -77,8 +85,11 @@
     bottom: 0;
   }
 
-
-  .DashboardMenuLateral-main-menu li:hover > a, .DashboardMenuLateral-main-menu li.active > a, .DashboardMenuLateral-main-menu li > a:focus {
+  .DashboardMenuLateral-icon:hover{
+    color: #fff;
+    
+  }
+  .DashboardMenuLateral-main-menu li:hover > a, .DashboardMenuLateral-main-menu li.active > a,.DashboardMenuLateral-main-menu li > a:focus {
     text-decoration: none;
     color: #fff;
     background-color: #00ddfa;
