--- a/src/components/dashboard/styles/DashboardMenuCentral.css
+++ b/src/components/dashboard/styles/DashboardMenuCentral.css
@@ -89,8 +89,8 @@ h1{
   position: relative;
   display: inline-block;
   padding: 12px 30px;
-  margin: 10px;
-  color: #00ddfa;
+  margin: 01px;
+  color: #8f8f8f;
   text-decoration: none;
   text-transform: uppercase;
   transition: 0.5s;
