--- a/src/components/forms/styles/UpdatePasswordForm.css
+++ b/src/components/forms/styles/UpdatePasswordForm.css
@@ -2,15 +2,14 @@
 
 
 
-
-/* .LoginForm-ZiriuzLogo {
+ .UpdateForm-ZiriuzLogo {
 
     width: 150px; 
     height: auto;
     margin: 10px auto; 
     display: block;
   }
- */
+
 
 
  .UpdatePasswordForm-box
@@ -95,7 +94,7 @@
  }
  
  
- .UpdatePasswordForm input
+ .UpdatePasswordForm-input
  {
      position: relative;
      width: 100%;
@@ -158,6 +157,7 @@
  .UpdatePasswordForm-button[type="submit"]
  {
      border: none;
+     text-align: center; 
      outline: none;
      background: #00ddfa;
      padding: 11px 25px;
@@ -170,9 +170,20 @@
  
  .UpdatePasswordForm-button[type="submit"]:active
  {
+    text-align: center; 
      opacity: 0.8;
  }
  
  .UpdatePasswordForm-p{
      color: #c4c4c4;
  }
+
+
+ .UpdatePasswordForm-center-text {
+    text-align: center; /* Centra horizontalmente */
+    display: flex;
+    justify-content: center; /* Centra horizontalmente */
+    align-items: center; /* Centra verticalmente */
+    height: 100px; /* Altura deseada */
+    color: #c4c4c4;
+  }
