--- a/src/components/forms/styles/RegisterForm.css
+++ b/src/components/forms/styles/RegisterForm.css
@@ -4,11 +4,11 @@
 .RegisterForm-box
 {
     position: relative;
-    width: 380px;
+    width: 900px;
     height: 900px;
     background: #1c1c1c;
     border-radius: 8px;
-    overflow: hidden;
+   
 }
 
 
@@ -21,16 +21,22 @@
     z-index: 10;
     padding: 50px 40px;
     display: flex;
-    flex-direction:  column;    
+    flex-direction: row;  
+    flex-wrap: wrap; 
+    justify-content:center; 
+   
 }
 
-
 .RegisterForm-form h2
-{
+{   height: 25px;
+    width:100% ;
+    padding: 20px;
+    margin: 40px;
     color:#00ddfa;
     font-weight: 500;
     text-align: center;
     letter-spacing: 0.1em;
+    position: relative;
 }
 
 
@@ -107,7 +113,8 @@
     outline: none;
     background: #00ddfa;
     padding: 11px 25px;
-    width: 100px;
+    height: 50px;
+    width: 200px;
     margin-top: 10px;
     border-radius: 4px;
     font-weight: 600;
@@ -121,3 +128,14 @@
 
 
 
+.Columna-1{
+    height: 450px;
+    float: left;
+    width: 50%;
+}
+
+.Columna-2{
+    height: 450px;
+    float: right;
+    width: 50%;
+}
