--- a/src/pages/styles/UsersPages.css
+++ b/src/pages/styles/UsersPages.css
@@ -13,9 +13,11 @@
 	margin:4rem 5vw;
 	padding:0;
 	list-style: none;
+	
   }
   .UsersPages-card {
-	  border: radius 20px;
+	
+	border-radius:  20px;
 	padding: 5px;
 	position: relative;
 	display: block;
@@ -24,7 +26,9 @@
 	border-radius: calc(var(--curve) * 1px);
 	overflow: hidden;
 	text-decoration: none;
-  }
+	background-image: linear-gradient(to top, #09203f 0%, #537895 100%);
+
+}
   .UsersPages-card-UserImage{
 	  align-self: center;
 	  width:20%;
@@ -40,6 +44,7 @@
 	background-color: var(--surface-color);
 	transform: translateY(100%);
 	transition: 0.1s ease-in-out;
+	
   }
   .UsersPages-card:hover .UsersPages-card-overlay{
 	transform: translateY(0);
@@ -58,6 +63,7 @@
 	padding:10px;
 	transform: translateY(-100%); 
 	transition: 0.0s ease-in-out;
+	
   }
   .card__arc{
 	width:2em;
@@ -66,6 +72,7 @@
 	bottom:100%;
 	right:0;
 	z-index: 1;
+	
   }
   
   .UsersPages-card:hover .UsersPages-card-header{
@@ -103,9 +110,7 @@
 	-webkit-line-clamp: 3;
 	overflow: hidden;
   }
-		  
-  
-  
+		    
 	.card-cover {
 	  width: 100%;
 	  height: 100%;
@@ -121,3 +126,20 @@
 	  transition: 0.0s;
 	}
 	
+	.UsersPages-container{
+
+	width: 1200px;
+	height: 100%;
+	}
+
+	.UserPages-Container-Card{
+		width: 1200px;
+		height: 100%;
+
+	display:grid;
+	grid-template-columns:repeat(auto-fit, minmax(300px, 1fr));
+	gap:2rem;
+	margin:4rem 5vw;
+	padding:0;
+	list-style: none
+	}
