--- a/src/pages/styles/UserDetailPage.css
+++ b/src/pages/styles/UserDetailPage.css
@@ -137,15 +137,23 @@
     display: flex;
     justify-content: center;
     align-items: center;
-
-     
+    background-color: #fff;
+    color: #00ddfa;
     }
   .usercard-button{
     height: 24px;
     padding: 0px 20px;
-    border-radius: 8px;
-    background-color: #546b77c2;
+    border-radius: 5px;
+    cursor: pointer;
+    border-color: #fafafa;
+    transition: 0.3s;
+    font-family: "Jost", sans-serif;
+    font-weight: 500;
+    outline: 0;
+    background-color: #00ddfa;
     color: #ffffff;
+    box-shadow: #636b6f;
+   
   }
   .usercard-section {
     display: none;
