--- a/src/components/forms/styles/RegisterForm.css
+++ b/src/components/forms/styles/RegisterForm.css
@@ -4,8 +4,8 @@
 .RegisterForm-box
 {
     position: relative;
-    width: 900px;
-    height: 900px;
+    width: 700px;
+    height: 700px;
     background: #1c1c1c;
     border-radius: 8px;
    
@@ -62,6 +62,28 @@
     letter-spacing: 0.05em;
     z-index: 10;
 }
+
+.RegisterForm-Field-clave{
+    position: relative;
+    width: 100%;
+    padding: 20px 10px 10px;
+    background: #00ddfa;
+    border: none;
+    outline: none;
+    color: #23242a;
+    font-size: 1em;
+    letter-spacing: 0.05em;
+    z-index: 10;
+    border-radius: 4px;
+}
+.RegisterForm-Field-clave:valid ~ span,
+.RegisterForm-Field-clave:focus ~ span
+{
+    color: #00ddfa;
+    transform: translateX(0px) translateY(-34px);
+    font-size: 0.75em;
+}
+
 
 .RegisterForm-inputBox span
 {
