--- a/src/pages/styles/UserDetailPage.css
+++ b/src/pages/styles/UserDetailPage.css
@@ -1,4 +1,3 @@
-@import url("https://fonts.googleapis.com/css?family=DM+Sans:400,500|Jost:400,500,600&display=swap");
 
 .usercard-user-section{
     color: #2b2c48;
@@ -48,7 +47,7 @@
     will-change: top;
     background-size: cover;
     background-position: center;
-    background-image: linear-gradient(to right, #00dbde 0%, #fc00ff 100%);
+    background-image: linear-gradient(to right, #00dbde 30%, #008afcb9 100%);
     filter: blur(30px);
     transform: scale(1.2);
     transition: 0.5s;
@@ -77,7 +76,7 @@
     transform: translateY(-10px) translateX(-50%);
     left: 50%;
     padding:1rem;
-    color:#00ddfa;
+    color:#09203f;
   }
   
   .usercard-jobtitle {
@@ -92,6 +91,7 @@
     margin: 0;
     left: 50%;
     transform: translateX(-50%) translateY(-7px);
+    color: #636b6f;
   }
   
   .usercard-main {
@@ -141,18 +141,15 @@
     color: #00ddfa;
     }
   .usercard-button{
-    height: 24px;
-    padding: 0px 20px;
-    border-radius: 5px;
+    border: none;
+    outline: none;
+    background: #00ddfa;
+    padding: 11px 25px;
+    width: 100px;
+    margin-top: 10px;
+    border-radius: 4px;
+    font-weight: 600;
     cursor: pointer;
-    border-color: #fafafa;
-    transition: 0.3s;
-    font-family: "Jost", sans-serif;
-    font-weight: 500;
-    outline: 0;
-    background-color: #00ddfa;
-    color: #ffffff;
-    box-shadow: #636b6f;
    
   }
   .usercard-section {
@@ -164,3 +161,6 @@
     }
   }
   
+  .delete-button-user{
+    position: absolute;
+  }
