--- a/src/pages/styles/UserDetailPage.css
+++ b/src/pages/styles/UserDetailPage.css
@@ -162,5 +162,9 @@
   }
   
   .delete-button-user{
-    position: absolute;
+    margin-top: 0;
+     position: relative;
+    left: -180px;
+    height: 30px;
+    width: 30px;
   }
