--- a/src/pages/styles/UserDetailPage.css
+++ b/src/pages/styles/UserDetailPage.css
@@ -137,7 +137,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #fff;
     color: #00ddfa;
     }
   .usercard-button{
@@ -167,4 +166,38 @@
     left: -180px;
     height: 30px;
     width: 30px;
+  }
+
+
+  .usercard-edit-button {
+    border: none;
+    outline: none;
+    background: #00ddfa; /* Color de fondo similar al botón "Editar" */
+    padding: 11px 25px;
+    width: 100px;
+    margin: 10px 5px 10px 0;
+    border-radius: 4px;
+    font-weight: 600;
+    cursor: pointer;
+    color: #09203f; /* Color del texto */
+    transition: background 0.3s, color 0.3s; /* Transición suave para cambios de color */
+  }
+  
+  .usercard-edit-button:hover {
+    background: #0099cc; /* Color de fondo cuando se pasa el mouse sobre el botón */
+    color: #fff; /* Color del texto cuando se pasa el mouse sobre el botón */
+  }
+
+  .usercard-buttons-edit {
+    padding: 10px;
+    height: 60px;
+    margin-right:100px;
+    margin-left: -300px; 
+    margin-top: 200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #00ddfa;
+
+    
   }
