--- a/src/components/users/styles/RegisterButtonRedirect.css
+++ b/src/components/users/styles/RegisterButtonRedirect.css
@@ -1,10 +1,17 @@
 .RegisterUser-button-redirec-container{
+    justify-content: start;
     position: absolute;
-    width: 100%;
-    height: 10px;
-    margin-top: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: #a0a0a0;
+    left: 1150px;
+    top: 25px;
+    
 }
+.RegisterUser-button-redirect{
+    top: -95px;
+    border-radius: 150px;
+    color:#00ddfa;
+    background-color: rgba(32, 32, 32,0.6);
+    padding: 5px;
+    height: 55px ;
+    width:55px ;
+}
+
