cambio de iconos

--- a/src/components/clients/styles/CreateClientButtonRedirect.css
+++ b/src/components/clients/styles/CreateClientButtonRedirect.css
@@ -1,8 +1,7 @@
 .CreateClient-button-redirect-container{
-    justify-content: start;
-    position: absolute;
+    position: relative;
     left: 1150px;
-    top: 25px;
+    top: -50px;
 }
 
 
