--- a/src/components/users/styles/RegisterButtonRedirect.css
+++ b/src/components/users/styles/RegisterButtonRedirect.css
@@ -1,8 +1,9 @@
 .RegisterUser-button-redirec-container{
-    justify-content: start;
-    position: absolute;
+    
+    position: relative;
     left: 1150px;
-    top: 25px;
+    top: -50px;
+    overflow: hidden;
 }
 
 
@@ -15,3 +16,4 @@
     height: 55px ;
     width:55px ;
 }
+
