Responsive Menu Central

--- a/src/components/dashboard/styles/DashboardMenuCentral.css
+++ b/src/components/dashboard/styles/DashboardMenuCentral.css
@@ -17,10 +17,15 @@
   order: 0;
   padding: 10px;
   margin: center;
+  position: relative;
+  top: -100px;
 
 
 }
-
+.DashboardMenuCentral-logo-Ziriuz{
+  width:250px;
+  height:150px;
+}
 
 .DashboardMenuCentral-title{
   font-size: 20px;
@@ -50,12 +55,10 @@
   border-radius: 6px;
   background-color: #1f1f1f;
   transition: background-color 0.3s ease; 
-
 }
 .DashboardMenuCentral-button:hover {
   color: #fff;
-  background-color: #00ddfa;
-  
+  background-color: #00ddfa; 
 }
 .DashboardMenuCentral-nav{
   height: 700px;
@@ -64,9 +67,6 @@
   text-align: center;
   background-color:#28292d;
   border-radius: 30px;
-
-
-  
 }
 .DashboardMenuCentral-nav-ul{
   height: 100%;
@@ -195,4 +195,185 @@
     50%,100%{
         left: 100%;
     }
+}
+/*////////////////---- Media---
+android  412* 914
+iphon 400* 845
+ipad 820*1180
+tablet712*1138
+laptop 1280*720-1920*1080
+pc 1920 * 1200
+uhd 3.840 x 2.160 
+///////////////////////////////////*/
+
+@media screen and (min-device-width: 412px) and (max-device-width: 914px) {
+  /*.DashboardMenuCentral{
+    display: flex;
+    flex-direction: column;
+  }*/
+  .DashboardMenuCentral-LogoPrincipal{
+    padding: 0px;
+    border: 1px solid #05050500;
+    width:80px;
+    height: 90px;
+    position: relative; 
+    top:-150px ;
+    left: -145px;
+   
+  }
+  .DashboardMenuCentral-logo-Ziriuz{
+    width:150px;
+    height:100px;
+  }
+  .DashboardMenuCentral-button{
+    height: 40px;
+    width: 40px;
+  }
+  .DashboardMenuCentral-nav{
+    height: 400px;
+    width: 30vh;
+    position: relative;
+    text-align: center;
+    background-color:#28292d;
+    border-radius: 30px;
+    display: flex;
+    flex-direction: column;
+    top: -120px;
+    right:25px ;
+   
+  }
+  .DashboardMenuCentral-nav-li{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    margin: 10px;
+
+  }
+  
+}
+
+/*@media screen and (min-device-width: 412px) and (max-device-width: 914px) {
+  .DashboardMenuCentral-LogoPrincipal{
+    padding: 0px;
+    border: 1px solid #05050500;
+    width:80px;
+    height: 90px;
+    position: relative;
+    
+  }
+  .DashboardMenuCentral-logo-Ziriuz{
+    width:150px;
+    height:100px;
+  }
+  .DashboardMenuCentral-button{
+    height: 40px;
+    width: 40px;
+  }
+  .DashboardMenuCentral-nav{
+    height: 200px;
+    width: 80vh;
+    position: relative;
+    text-align: center;
+    background-color:#28292d;
+    border-radius: 30px;
+  }
+  .DashboardMenuCentral-nav-li{
+    display: flex;
+    flex-wrap: nowrap;
+    margin: 10px;
+
+  }
+  
+}*/
+
+@media screen and (min-device-width: 600px) and (max-device-width: 845px){
+  .DashboardMenuCentral-LogoPrincipal{
+    padding: 0px;
+    border: 1px solid #05050500;
+    width:80px;
+    height: 90px;
+    position: relative; 
+    top:-150px ;
+    left: -100px;
+  }
+  .DashboardMenuCentral-logo-Ziriuz{
+    width:130px;
+    height:80px;
+  }
+  .DashboardMenuCentral-button{
+    height: 40px;
+    width: 40px;
+    
+  }
+  .DashboardMenuCentral-nav{
+    height: 200px;
+    width: 80vh;
+    position: relative;
+    text-align: center;
+    background-color:#28292d;
+    border-radius: 30px;
+    top: -120px;
+  }
+  .DashboardMenuCentral-nav-li{
+    display: flex;
+    flex-wrap: nowrap;
+    margin: 10px;
+
+  }
+}
+@media screen and (min-device-width: 820px) and (max-device-width: 1180px) {
+  .DashboardMenuCentral-button{
+    height: 80px;
+    width: 80px;
+  }
+  .DashboardMenuCentral-nav{
+    height: 400px;
+    width: 100vh;
+    position: relative;
+    text-align: center;
+    background-color:#28292d;
+    border-radius: 30px;
+  }
+}
+
+@media screen and (min-device-width: 1920px) and (max-device-width: 1080px) {
+  .DashboardMenuCentral-button{
+    height: 80px;
+    width: 80px;
+  }
+  .DashboardMenuCentral-nav{
+    height: 200px;
+    width: 80vh;
+    position: relative;
+    text-align: center;
+    background-color:#28292d;
+    border-radius: 30px;
+  }
+  .DashboardMenuCentral-nav-li{
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0 10px;
+  }
+}
+/* Extra large devices (large laptops and desktop, 1200px and up */
+@media screen and  (min-device-width: 1920px) and (max-device-width: 1200px) {
+  .DashboardMenuCentral-button{
+    height: 150px;
+    width: 150px;
+  }
+  .DashboardMenuCentral-nav-ul{
+    height: 100%;
+    width: 100%;
+    padding: 30px 30px;
+    list-style-type: none;
+    margin: 10px;
+  }
+  .DashboardMenuCentral-nav{
+    height: 700px;
+    width: 150vh;
+    position: relative;
+    text-align: center;
+    background-color:#28292d;
+    border-radius: 30px;
+  }
 }
