Medias, Sedes, Clientes,Users

--- a/src/modules/users/components/clients/styles/DeleteClientButton.css
+++ b/src/modules/users/components/clients/styles/DeleteClientButton.css
@@ -228,37 +228,26 @@
 
 /***********************************************/
 
-@media screen and (min-device-width: 412px) and (max-device-width: 914px) {
-#DeleteUser-app-cover {
-  position: absolute;
-  top:-125px;
-  left: 455px;
-  width: 50px;
-  height: 50px;
-  background-color: #fff;
-  border-radius: 50%;
-  box-shadow: 0 0 0 8px #feeeed;
-  overflow: hidden;
-  
+@media screen and (min-device-width: 412px) and (max-device-width: 915px) {
+  #DeleteClient-app-cover {
+    position: absolute;
+    top: 5%;
+    right: 0px;
+    left: 400px;
+    width: 50px;
+    height: 50px;
+  }
 }
-
-}
-
 
 
 @media screen and (min-device-width: 600px) and (max-device-width: 845px){
-#DeleteUser-app-cover {
+#DeleteClient-app-cover {
   position: absolute;
   top: 50%;
-  right: 20px;
-  left: 600px;
+  left: 500px;
   width: 50px;
   height: 50px;
 
-  background-color: #fff;
-  border-radius: 50%;
-  box-shadow: 0 0 0 8px #feeeed;
-  overflow: hidden;
   
 }
 
@@ -266,29 +255,25 @@
 
 }
 @media screen and (min-device-width: 820px) and (max-device-width: 1180px) {
-#DeleteUser-app-cover {
+#DeleteClient-app-cover {
   position: absolute;
   top: -50%;
   right: 20px;
-  left: 600px;
+  left: 450px;
   width: 50px;
   height: 50px;
   margin: -600px auto 0 auto;
-  background-color: #fff;
-  border-radius: 50%;
-  box-shadow: 0 0 0 8px #feeeed;
-  overflow: hidden;
-  
+
 }
 
 
 
 }
 
-@media screen and (min-device-width: 1920px) and (max-device-width: 1080px) {
-#DeleteUser-app-cover {
+@media screen and (min-device-width:1080px ) and (max-device-width:1920px ) {
+#DeleteClient-app-cover {
   position: absolute;
-  top: 50%;
+  top: 15%;
   right: 20px;
   left: 600px;
   width: 50px;
@@ -305,10 +290,10 @@
 
 }
 /* Extra large devices (large laptops and desktop, 1200px and up */
-@media screen and  (min-device-width: 1920px) and (max-device-width: 1200px) {
-#DeleteUser-app-cover {
+@media screen and  (min-device-width: 1200px) and (max-device-width: 1920) {
+#Deletelient-app-cover {
   position: absolute;
-  top: 50%;
+  top: 15%;
   right: 20px;
   left: 600px;
   width: 50px;
