--- a/src/modules/users/components/users/styles/RegisterButtonRedirect.css
+++ b/src/modules/users/components/users/styles/RegisterButtonRedirect.css
@@ -1,59 +1,63 @@
 .RegisterUser-button-redirec-container{
-    
     position: relative;
     left: 1150px;
-    top: -50px;
-    overflow: hidden;
+    top: 100px;
 }
 
 
 .RegisterUser-button-redirect{
-    top: -95px;
+    position: absolute;
+    top: -102px;
     border-radius: 150px;
     color:#00ddfa;
-    background-color: rgba(32, 32, 32,0.6);
+    background-color: rgba(122, 122, 122, 0.6);
     padding: 5px;
     height: 55px ;
     width:55px ;
 }
 
-@media screen and (min-device-width: 412px) and (max-device-width: 914px) {
+@media screen and (min-device-width: 412px) and (max-device-width: 915px) {
     .RegisterUser-button-redirec-container{
-    
-        position: relative;
-        left: 280px;
-        top: -50px;
-        overflow: hidden;
+        position: absolute;
+        left: 330px;
+        top: 115px;
     }
-    .RegisterUser-button-redirect{
-        top: -95px;
-        border-radius: 150px;
-        color:#00ddfa;
-        background-color: rgba(32, 32, 32,0.6);
-        padding: 5px;
-        height: 55px ;
-        width:55px ;
-    }
-  
-    
   }
-
+  
+  
+  
+  @media screen and (min-device-width: 600px) and (max-device-width: 845px){
+    .RegisterUser-button-redirec-container{
+        position: absolute;
+        left: 450px;
+        top: 115px;
+    }
+  }
   @media screen and (min-device-width: 820px) and (max-device-width: 1180px) {
     .RegisterUser-button-redirec-container{
-    
-        position: relative;
-        left: 480px;
-        top: -50px;
-        overflow: hidden;
-    }
-    .RegisterUser-button-redirect{
-        top: -95px;
-        border-radius: 150px;
-        color:#00ddfa;
-        background-color: rgba(32, 32, 32,0.6);
-        padding: 5px;
-        height: 55px ;
-        width:55px ;
+        position: absolute;
+        left: 700px;
+        top: 118px;
+       
     }
   }
-  
+  /*
+    
+    @media screen and (min-device-width: 1080px) and (max-device-width: 1920px) {
+      .CreateSede-button-redirect-container{
+        position: absolute;
+        left: 1450px;
+        top: 170px;
+      }
+    }
+   
+    @media screen and (min-device-width: 1920px) and (max-device-width: 1200px) {
+      .CreateSede-button-redirect-container{
+        position: absolute;
+        left: 1550px;
+        top: 150px;
+      }
+      
+     
+      
+    } */
