--- a/src/modules/users/components/clients/styles/CreateClientButtonRedirect.css
+++ b/src/modules/users/components/clients/styles/CreateClientButtonRedirect.css
@@ -1,12 +1,13 @@
 .CreateClient-button-redirect-container{
     position: relative;
     left: 1150px;
-    top: -50px;
+    top: 45px;
 }
 
 
 .CreateClient-button-redirect{
-    top: -95px;
+    position: absolute;
+    top: -45px;
     border-radius: 150px;
     color:#00ddfa;
     background-color: rgba(32, 32, 32,0.6);
@@ -14,3 +15,48 @@
     height: 55px ;
     width:55px ;
 }
+
+/* Clientes media */
+
+@media screen and (min-device-width: 412px) and (max-device-width: 915px) {
+  .CreateClient-button-redirect-container{
+      position: absolute;
+      left: 330px;
+      top: 60px;
+  }
+}
+
+
+
+@media screen and (min-device-width: 600px) and (max-device-width: 845px){
+  .CreateClient-button-redirect-container{
+      position: absolute;
+      left: 450px;
+      top: 60px;
+  }
+}
+@media screen and (min-device-width: 820px) and (max-device-width: 1180px) {
+  .CreateClient-button-redirect-container{
+      position: absolute;
+      left: 700px;
+      top: 60px;
+     
+  }
+}
+/*
+   @media screen and (min-device-width: 1080px) and (max-device-width: 1920px) {
+    .CreateClient-button-redirect-container{
+      position: absolute;
+      left: 1450px;
+      top: 55px;
+    }
+  } 
+
+  @media screen and (min-device-width: 1920px) and (max-device-width: 1200px) {
+    .CreateClient-button-redirect-container{
+      position: absolute;
+      left: 1700px;
+      top: 150px;
+    }
+  }
+     */
