--- a/src/modules/users/components/sedes/styles/CreateSedeButtonRedirect.css
+++ b/src/modules/users/components/sedes/styles/CreateSedeButtonRedirect.css
@@ -1,12 +1,13 @@
 .CreateSede-button-redirect-container{
     position: relative;
     left: 1150px;
-    top: -50px;
+    top: 100px;
 }
 
 
 .CreateSede-button-redirect{
-    top: -95px;
+    position: absolute;
+    top: -102px;
     border-radius: 150px;
     color:#00ddfa;
     background-color: rgba(32, 32, 32,0.6);
@@ -14,3 +15,52 @@
     height: 55px ;
     width:55px ;
 }
+
+
+/* sedes media  */
+
+@media screen and (min-device-width: 412px) and (max-device-width: 915px) {
+  .CreateSede-button-redirect-container{
+      position: absolute;
+      left: 330px;
+      top: 115px;
+  }
+}
+
+
+
+@media screen and (min-device-width: 600px) and (max-device-width: 845px){
+  .CreateSede-button-redirect-container{
+      position: absolute;
+      left: 450px;
+      top: 115px;
+  }
+}
+@media screen and (min-device-width: 820px) and (max-device-width: 1180px) {
+  .CreateSede-button-redirect-container{
+      position: absolute;
+      left: 700px;
+      top: 118px;
+     
+  }
+}
+/*
+  
+  @media screen and (min-device-width: 1080px) and (max-device-width: 1920px) {
+    .CreateSede-button-redirect-container{
+      position: absolute;
+      left: 1450px;
+      top: 170px;
+    }
+  }
+ 
+  @media screen and (min-device-width: 1920px) and (max-device-width: 1200px) {
+    .CreateSede-button-redirect-container{
+      position: absolute;
+      left: 1550px;
+      top: 150px;
+    }
+    
+   
+    
+  } */
