--- a/src/modules/users/pages/styles/ClientDetailPage.css
+++ b/src/modules/users/pages/styles/ClientDetailPage.css
@@ -195,3 +195,112 @@
     background: #0099cc; /* Color de fondo cuando se pasa el mouse sobre el botón */
     color: #fff; /* Color del texto cuando se pasa el mouse sobre el botón */
   }
+
+
+  /*///////////////////////////////*/
+  @media screen and (min-device-width: 412px) and (max-device-width: 914px) {
+	
+    .clientcard-client-section {
+      margin-left: 10px;
+      width: 320px;
+      height: 480px;
+    }
+    .clientcard {
+      color: #2b2c48;
+      font-family: "Jost", sans-serif;
+      display: flex;   
+      width: 300px;
+      height: 470px;  
+    }
+    .clientcard-content-1 {
+      position: relative;
+      right: 30px;
+    }
+  
+    }
+    
+    
+    
+    @media screen and (min-device-width: 600px) and (max-device-width: 845px){
+     
+      .clientcard-client-section {
+        width: 320px;
+        height: 480px;
+      }
+      .clientcard {
+        color: #2b2c48;
+        font-family: "Jost", sans-serif;
+        display: flex;   
+        width: 300px;
+        height: 470px;  
+      }
+      .clientcard-content-1 {
+        position: relative;
+        right: 30px;
+    
+      }
+    }
+    @media screen and (min-device-width: 820px) and (max-device-width: 1180px) {
+      .clientcard-client-section {
+        width: 320px;
+        height: 480px;
+      }
+      .clientcard {
+        color: #2b2c48;
+        font-family: "Jost", sans-serif;
+        display: flex;   
+        width: 300px;
+        height: 470px;  
+      }
+      .clientcard-content-1 {
+        position: relative;
+        right: 30px;
+    
+      }
+    }
+    
+    @media screen and (min-device-width: 1920px) and (max-device-width: 1080px) {
+    
+      .clientcard-client-section{
+        width: 90%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        padding:0;
+        list-style: none
+      }
+      .clientcard  {
+      border-radius:  20px;
+      padding: 5px;
+      position: relative;
+      display: block;
+      height: 280px;
+      width: 300px;
+      border-radius: calc(var(--curve) * 1px);
+      overflow: hidden;
+      text-decoration: none;
+      background-image: linear-gradient(to top, #09203f 0%, #537895 100%);
+    
+      
+    }
+    }
+    
+    @media screen and  (min-device-width: 1920px) and (max-device-width: 1200px) {
+     
+      .clientcard {
+      width: 360px;
+      height: 500px;
+      margin: auto;
+      overflow-y: auto;
+      position: relative;
+      z-index: 1;
+      overflow-x: hidden;
+      background-color: rgba(255, 255, 255, 1);
+      display: flex;
+      transition: 0.3s;
+      flex-direction: column;
+      border-radius: 10px;
+      box-shadow: 0 0 0 8px rgba(255, 255, 255, 0.2);
+    }
+    }
+  
