--- a/src/modules/users/pages/styles/SedesPages.css
+++ b/src/modules/users/pages/styles/SedesPages.css
@@ -177,14 +177,13 @@
   
   @media screen and (min-device-width: 600px) and (max-device-width: 845px){
    
-  .SedesPages-cards-list{
-    display:grid;
-    grid-template-columns:repeat(auto-fit, minmax(300px, 1fr));
-    gap:2rem;
-    margin:4rem 5vw;
-    padding:0;
-    list-style: none;
-    
+    .SedesPages-Container-Card{
+      width: 90%;
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+      padding:0;
+      list-style: none
     }
     .SedesPages-card {
     border-radius:  20px;
@@ -193,6 +192,7 @@
     display: block;
     height: 280px;
     width: 300px;
+    left: 100px;
     border-radius: calc(var(--curve) * 1px);
     overflow: hidden;
     text-decoration: none;
@@ -213,7 +213,7 @@
     border-radius:  20px;
     padding: 5px;
     position: relative;
-    left: 50px;
+    left: 190px;
     height: 220px;
     width: 250px;
     border-radius: calc(var(--curve) * 1px);
@@ -251,21 +251,31 @@
   }
   }
   
-  @media screen and  (min-device-width: 1920px) and (max-device-width: 1200px) {
+  @media screen and  (min-device-width:1920px ) and (max-device-width:1200px ) {
    
-  .SedesPages-card {
-    width: 360px;
-    height: 500px;
-    margin: auto;
-    overflow-y: auto;
-    position: relative;
-    z-index: 1;
-    overflow-x: hidden;
-    background-color: rgba(255, 255, 255, 1);
-    display: flex;
-    transition: 0.3s;
-    flex-direction: column;
-    border-radius: 10px;
-    box-shadow: 0 0 0 8px rgba(255, 255, 255, 0.2);
-  }
+    .SedesPages-cards-list{
+      width: 100%;
+      height: 100%;
+      display:grid;
+      grid-template-columns:repeat(auto-fit, minmax(300px, 1fr));
+      gap:2rem;
+      margin:4rem 5vw;
+      padding:0;
+      list-style: none;
+      
+      }
+      .SedesPages-card {
+      border-radius:  20px;
+      padding: 5px;
+      position: relative;
+      display: block;
+      height: 280px;
+      width: 300px;
+      border-radius: calc(var(--curve) * 1px);
+      overflow: hidden;
+      text-decoration: none;
+      background-image: linear-gradient(to top, #09203f 0%, #537895 100%);
+    
+      
+    }
   }
