--- a/src/modules/users/pages/styles/UsersPages.css
+++ b/src/modules/users/pages/styles/UsersPages.css
@@ -29,7 +29,6 @@
 
 }
   .UsersPages-card-UserImage{
-	  align-self: center;
 	  width:20%;
 	  height: 20%;
   }
@@ -126,20 +125,19 @@
 	}
 	
 	.UsersPages-container{
-
-	width: 1200px;
+	width: 100%;
 	height: 100%;
 	}
 
 	.UserPages-Container-Card{
 		width: 1200px;
 		height: 100%;
-	display:grid;
-	grid-template-columns:repeat(auto-fit, minmax(300px, 1fr));
-	gap:2rem;
-	margin:2rem 3vw;
-	padding:0;
-	list-style: none
+		display:grid;
+		grid-template-columns:repeat(auto-fit, minmax(300px, 1fr));
+		gap:2rem;
+		margin:2rem 3vw;
+		padding:0;
+		list-style: none
 	}
 
 	@media screen and (min-device-width: 412px) and (max-device-width: 914px) {
@@ -164,6 +162,7 @@
 			overflow: hidden;
 			text-decoration: none;
 			background-image: linear-gradient(to top, #09203f 0%, #537895 100%);
+		  
 		
 		}
 	  }
@@ -174,11 +173,12 @@
 	   
 		.UsersPages-cards-list{
 			display:grid;
-			grid-template-columns:repeat(auto-fit, minmax(300px, 1fr));
-			gap:2rem;
-			margin:4rem 5vw;
+			width: 90%;
+			height: 100%;
+			display: flex;
+			flex-direction: column;
 			padding:0;
-			list-style: none;
+			list-style: none
 			
 		  }
 		  .UsersPages-card {
@@ -188,11 +188,12 @@
 			display: block;
 			height: 280px;
 			width: 300px;
+			left: -10px;
 			border-radius: calc(var(--curve) * 1px);
 			overflow: hidden;
 			text-decoration: none;
 			background-image: linear-gradient(to top, #09203f 0%, #537895 100%);
-		}
+		  }
 	  }
 	  @media screen and (min-device-width: 820px) and (max-device-width: 1180px) {
 		.UserPages-Container-Card{
@@ -208,14 +209,14 @@
 			border-radius:  20px;
 			padding: 5px;
 			position: relative;
-			left: 50px;
+			left: -30px;
 			height: 220px;
 			width: 250px;
 			border-radius: calc(var(--curve) * 1px);
 			overflow: hidden;
 			text-decoration: none;
 			background-image: linear-gradient(to top, #09203f 0%, #537895 100%);
-		
+			  
 		}
 	  }
 	  
@@ -231,7 +232,7 @@
 			
 		  }
 		  .UsersPages-card {
-			border-radius:  20px;
+		    border-radius:  20px;
 			padding: 5px;
 			position: relative;
 			display: block;
