--- a/src/pages/styles/UnauthorizedPage.css
+++ b/src/pages/styles/UnauthorizedPage.css
@@ -4,34 +4,20 @@
     margin:0px auto;
     padding: 0px auto;
     text-align:center;
-    background-color: #3d3d3d;
-
-    
+    background-color: #3d3d3d 
   }
  
 
-/* .Unauthorized-Page{
-    margin:0px auto;
-    padding: 0px;
-    text-align:center;
-
-} */
-
-
-
-
-
-
 .cont_principal {
-    position: absolute;  
-      width: 100%;
-      height: 100%;
+    position: relative;  
+      width: 900px;
+      height: 700px;
     overflow: hidden;
     }
     .cont_error {
-    position: absolute;
+    position: relative;
       width: 100%;
-      height: 300px;
+      height: 80%;
       top: 50%;
       margin-top:-150px;
     }
@@ -197,104 +183,165 @@
     }
   
     /********//***************//**************//****************//*////////////*/
-
-
-  @media screen and (min-device-width: 412px) and (max-device-width: 914px) {
-    .cont_error > h1  {
-      font-family: 'Lato', sans-serif;  
-      font-weight: 200;
-      font-size:150px;
-      color:#fff;
-      position: relative;
-      left:-100%;
-      transition: all 0.5s;
-      top: -250px;
-     }
-     .buttonReturn{
-      position: relative;
-      top: -35px;
-      border:1px solid white;
-      border-radius:5px;
-      height: 35px;
-      width: 55px;
-      background-color: #00ddf3;
-      color: #fff;
-      font-size: 25px;
-    }
-    .cont_error > p  {
-      font-family: 'Lato', sans-serif;  
-      font-weight: 300;
-      font-size:15px;
-      letter-spacing: 5px;
-      color:#ffffff;
-      position: relative;
-      left:100%;
-      top: -200px;
-      transition: all 0.5s;
-         transition-delay: 0.5s;
-      -webkit-transition: all 0.5s;
-      -webkit-transition-delay: 0.5s;
-     }
-     .cont_aura_1 {
-      position:absolute;
-      width:200px;
-      height: 120%;
-      top:25px;
-      right: -340px;
-      background-color: #00ddf3;
-      box-shadow: 0px 0px  50px  20px  #00ddf3;
-      -webkit-transition: all 0.5s;
-        transition: all 0.5s;
-    }
-    }
-   
-        
-    @media screen and (min-device-width: 600px) and (max-device-width: 845px){
+    @media screen and (min-device-width: 412px) and (max-device-width: 914px) {
+      
+      .cont_error {
+        position: relative;
+          width: 100%;
+          height: 100%;
+          top: 50%;
+          margin-top:-90px;
+        }
+      
       .cont_error > h1  {
         font-family: 'Lato', sans-serif;  
-       font-weight: 400;
-         font-size:150px;
-       color:#fff;
-       position: relative;
-       left:-100%;
-       transition: all 0.5s;
+        font-weight: 200;
+        font-size:100px;
+        color:#fff;
+        position: relative;
+        left:-100%;
+        transition: all 0.5s;
+        top: -30px;
        }
-       
-       .cont_error > p  {
-        font-family: 'Lato', sans-serif;  
-       font-weight: 300;
-         font-size:24px;
-         letter-spacing: 5px;
-       color:#ffffff;
-       position: relative;
-       left:100%;
-       transition: all 0.5s;
-           transition-delay: 0.5s;
-       -webkit-transition: all 0.5s;
-        -webkit-transition-delay: 0.5s;
-       }
-      .cont_error_active > .cont_aura_1 {
-        transform: rotate(20deg);
-         right:-170px;
-           animation-name: animation_error_1;
-           animation-duration: 4s;
-         animation-timing-function: linear;
-           animation-iteration-count: infinite;
-           animation-direction: alternate;
-       }
-     
        .buttonReturn{
-         position: relative;
-         top: 35px;
-         border:1px solid white;
-         border-radius:5px;
-         height: 45px;
-         width: 55px;
-         background-color: #00ddf3;
-         color: #fff;
-         font-size: 30px;
+        position: relative;
+        top: 135px;
+        border:1px solid white;
+        border-radius:5px;
+        height: 35px;
+        width: 55px;
+        background-color: #00ddf3;
+        color: #fff;
+        font-size: 25px;
+      }
+      .cont_error > p  {
+        font-family: 'Lato', sans-serif;  
+        font-weight: 300;
+        font-size:12px;
+        letter-spacing: 5px;
+        color:#ffffff;
+        position: relative;
+        left:100%;
+        top: 90px;
+        transition: all 0.5s;
+           transition-delay: 0.5s;
+        -webkit-transition: all 0.5s;
+        -webkit-transition-delay: 0.5s;
+        overflow: auto;
        }
-    }
+       .cont_aura_1 {
+        position:absolute;
+        width:100px;
+        height: 120%;
+        top:25px;
+        right: -340px;
+        background-color: #00ddf3;
+        box-shadow: 0px 0px  50px  20px  #00ddf3;
+        -webkit-transition: all 0.5s;
+          transition: all 0.5s;
+        
+
+      }
+      }
+      @media screen and (min-device-width: 600px) and (max-device-width: 845px){
+        .cont_error > h1  {
+          font-family: 'Lato', sans-serif;  
+         font-weight: 300;
+           font-size:150px;
+         color:#fff;
+         position: relative;
+         left:-100%;
+         transition: all 0.5s;
+         top: -45px;
+         }
+         
+         .cont_error > p  {
+          font-family: 'Lato', sans-serif;  
+         font-weight: 300;
+           font-size:24px;
+           letter-spacing: 5px;
+         color:#ffffff;
+         position: relative;
+         left:100%;
+         top: -40px;
+         transition: all 0.5s;
+             transition-delay: 0.5s;
+         -webkit-transition: all 0.5s;
+          -webkit-transition-delay: 0.5s;
+         }
+        .cont_error_active > .cont_aura_1 {
+          transform: rotate(20deg);
+           right:-170px;
+             animation-name: animation_error_1;
+             animation-duration: 4s;
+           animation-timing-function: linear;
+             animation-iteration-count: infinite;
+             animation-direction: alternate;
+         }
+       
+         .buttonReturn{
+           position: relative;
+           top: 35px;
+           border:1px solid white;
+           border-radius:5px;
+           height: 45px;
+           width: 55px;
+           background-color: #00ddf3;
+           color: #fff;
+           font-size: 30px;
+         }
+      }
+
+      @media screen and (min-device-width: 820px) and (max-device-width: 1180px) {
+        .cont_error > h1  {
+          font-family: 'Lato', sans-serif;  
+         font-weight: 400;
+           font-size:150px;
+         color:#fff;
+         position: relative;
+         left:-100%;
+         transition: all 0.5s;
+         }
+         
+         .cont_error > p  {
+          font-family: 'Lato', sans-serif;  
+         font-weight: 300;
+           font-size:24px;
+           letter-spacing: 5px;
+         color:#ffffff;
+         position: relative;
+         left:100%;
+         transition: all 0.5s;
+             transition-delay: 0.5s;
+         -webkit-transition: all 0.5s;
+          -webkit-transition-delay: 0.5s;
+         }
+        .cont_error_active > .cont_aura_1 {
+          transform: rotate(20deg);
+           right:-170px;
+             animation-name: animation_error_1;
+             animation-duration: 4s;
+           animation-timing-function: linear;
+             animation-iteration-count: infinite;
+             animation-direction: alternate;
+         }
+       
+         .buttonReturn{
+           position: relative;
+           top: 35px;
+           border:1px solid white;
+           border-radius:5px;
+           height: 45px;
+           width: 55px;
+           background-color: #00ddf3;
+           color: #fff;
+           font-size: 30px;
+         }
+      }
+  /* 
+   
+        
+    
     @media screen and (min-device-width: 820px) and (max-device-width: 1180px) {
       .cont_error > h1  {
         font-family: 'Lato', sans-serif;  
@@ -436,4 +483,4 @@
          color: #fff;
          font-size: 30px;
        }
-    }
+    } */
